infrastructure/base/k8s-dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
  labels:
    middle-earth-cluster.homelab/category: infrastructure
    middle-earth-cluster.homelab/realm: monitoring
