infrastructure/base/k8s-dashboard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    middle-earth-cluster.homelab/category: infrastructure
    middle-earth-cluster.homelab/realm: monitoring
spec:
  parentRefs:
    - name: internal-gateway
      namespace: ingress-nginx
  hostnames:
    - k8s.from-gondor.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
